fixes padding on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -99,10 +99,10 @@ header {
 
 main {
     flex-grow: 1;
-    padding: 2rem;
+    padding-top: 2rem;
     max-width: 1200px;
     margin: 0 auto;
-    width: 100%;
+    width: 90%;
 }
 
 button {
